[gd_scene load_steps=17 format=3 uid="uid://4aaxmxmdoh3w"]

[ext_resource type="Script" path="res://scripts/multi_neuron_network.gd" id="1_0evh2"]
[ext_resource type="Texture2D" uid="uid://ba3thwwlffu50" path="res://lampon.png" id="2_rw2re"]
[ext_resource type="Script" uid="uid://bjxbv8yqv7a18" path="res://lamp.gd" id="3_sp64h"]
[ext_resource type="Texture2D" uid="uid://bbrdr75s48geo" path="res://pixellight.png" id="4_okdlm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4532e"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_gh32e"]
offsets = PackedFloat32Array(0.947917, 1)
colors = PackedColorArray(0.25, 0.25, 0.25, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ou2kl"]
gradient = SubResource("Gradient_gh32e")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.2)

[sub_resource type="Gradient" id="Gradient_3k2mr"]
offsets = PackedFloat32Array(0.947917, 1)
colors = PackedColorArray(0.25, 0.25, 0.25, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p34x2"]
gradient = SubResource("Gradient_3k2mr")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.2)

[sub_resource type="Gradient" id="Gradient_71xcm"]
offsets = PackedFloat32Array(0.947917, 1)
colors = PackedColorArray(0.25, 0.25, 0.25, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c8e3u"]
gradient = SubResource("Gradient_71xcm")
width = 100
height = 100
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.2)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qj3r6"]
light_mode = 1

[sub_resource type="Curve2D" id="Curve2D_qr3t4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -21, -18, 0, 0, 0, 0, 72, -100)
}
point_count = 2

[sub_resource type="GDScript" id="GDScript_s7grx"]
script/source = "@tool
extends Path2D

@onready var line_2d: Line2D = $Line2D
@export var weight: float = 0.5

func _physics_process(_delta: float) -> void:
	if line_2d:
		var points = curve.get_baked_points()
		line_2d.points = points
		line_2d.width = 1.0 + (weight * 4.0)
"

[sub_resource type="Curve2D" id="Curve2D_njku4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -21, 17, 0, 0, 0, 0, 72, -100)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_2f4kj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -21, -18, 0, 0, 0, 0, 72, 0)
}
point_count = 2

[node name="MultiNeuronNetwork" type="Node2D"]
script = ExtResource("1_0evh2")

[node name="Layer1" type="Node2D" parent="."]
position = Vector2(100, 150)

[node name="Neuron1" type="Panel" parent="Layer1"]
custom_minimum_size = Vector2(60, 60)
offset_left = -30.0
offset_top = -80.0
offset_right = 30.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4532e")

[node name="Sprite2D" type="Sprite2D" parent="Layer1/Neuron1"]
position = Vector2(30, 30)
scale = Vector2(0.6, 0.6)
texture = SubResource("GradientTexture2D_ou2kl")

[node name="Value" type="Label" parent="Layer1/Neuron1"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Layer1/Neuron1"]
layout_mode = 0
offset_left = -50.0
offset_top = 70.0
offset_right = 110.0
offset_bottom = 86.0
max_value = 1.0
step = 0.1

[node name="Neuron2" type="Panel" parent="Layer1"]
custom_minimum_size = Vector2(60, 60)
offset_left = -30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4532e")

[node name="Sprite2D" type="Sprite2D" parent="Layer1/Neuron2"]
position = Vector2(30, 30)
scale = Vector2(0.6, 0.6)
texture = SubResource("GradientTexture2D_p34x2")

[node name="Value" type="Label" parent="Layer1/Neuron2"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Layer1/Neuron2"]
layout_mode = 0
offset_left = -50.0
offset_top = 70.0
offset_right = 110.0
offset_bottom = 86.0
max_value = 1.0
step = 0.1

[node name="Layer2" type="Node2D" parent="."]
position = Vector2(250, 150)

[node name="Neuron3" type="Panel" parent="Layer2"]
custom_minimum_size = Vector2(60, 60)
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4532e")

[node name="Sprite2D" type="Sprite2D" parent="Layer2/Neuron3"]
position = Vector2(30, 30)
scale = Vector2(0.6, 0.6)
texture = SubResource("GradientTexture2D_c8e3u")

[node name="Value" type="Label" parent="Layer2/Neuron3"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Layer3" type="Node2D" parent="."]
position = Vector2(400, 150)

[node name="Lamp" type="Sprite2D" parent="Layer3"]
material = SubResource("CanvasItemMaterial_qj3r6")
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_rw2re")
script = ExtResource("3_sp64h")

[node name="Light" type="PointLight2D" parent="Layer3/Lamp"]
position = Vector2(0, -65.7534)
scale = Vector2(4.68493, 4.68493)
texture = ExtResource("4_okdlm")
texture_scale = 2.0

[node name="Connections" type="Node2D" parent="."]

[node name="N1toN3" type="Path2D" parent="Connections"]
position = Vector2(100, 150)
curve = SubResource("Curve2D_qr3t4")
script = SubResource("GDScript_s7grx")
weight = 0.7

[node name="Line2D" type="Line2D" parent="Connections/N1toN3"]
points = PackedVector2Array(-21, -18, -19.9556, -18.9209, -17.0039, -21.5234, -14.898, -23.3802, -12.4175, -25.5674, -9.59637, -28.0548, -6.46875, -30.8125, -3.06866, -33.8104, 0.569824, -37.0186, 2.46783, -38.6921, 4.41266, -40.4069, 6.40006, -42.1592, 8.42578, -43.9453, 10.4856, -45.7615, 12.5751, -47.6039, 14.6903, -49.4688, 16.8267, -51.3525, 18.9801, -53.2513, 21.1463, -55.1613, 23.321, -57.0788, 25.5, -59, 27.679, -60.9212, 29.8537, -62.8387, 32.0199, -64.7487, 34.1733, -66.6475, 36.3097, -68.5312, 38.4249, -70.3961, 40.5144, -72.2385, 42.5742, -74.0547, 44.5999, -75.8408, 46.5873, -77.5931, 48.5322, -79.3079, 50.4302, -80.9814, 54.0687, -84.1896, 57.4688, -87.1875, 60.5964, -89.9452, 63.4175, -92.4326, 65.898, -94.6198, 68.0039, -96.4766, 70.9556, -99.0791, 72, -100)
width = 3.8
default_color = Color(0, 0, 0, 1)

[node name="Weight" type="Label" parent="Connections/N1toN3"]
offset_left = 17.0
offset_top = -77.0
offset_right = 57.0
offset_bottom = -51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="N2toN3" type="Path2D" parent="Connections"]
position = Vector2(100, 150)
curve = SubResource("Curve2D_njku4")
script = SubResource("GDScript_s7grx")
weight = 0.3

[node name="Line2D" type="Line2D" parent="Connections/N2toN3"]
points = PackedVector2Array(-21, 17, -19.9556, 15.686, -17.0039, 11.9727, -14.898, 9.3233, -12.4175, 6.20264, -9.59637, 2.6535, -8.06875, 0.731651, -6.46875, -1.28125, -4.80064, -3.37984, -3.06866, -5.55878, -1.27709, -7.81269, 0.569824, -10.1362, 2.46783, -12.524, 4.41266, -14.9708, 6.40006, -17.471, 8.42578, -20.0195, 10.4856, -22.6109, 12.5751, -25.2397, 14.6903, -27.9006, 16.8267, -30.5884, 18.9801, -33.2975, 21.1463, -36.0228, 23.321, -38.7587, 25.5, -41.5, 27.679, -44.2413, 29.8537, -46.9772, 32.0199, -49.7025, 34.1733, -52.4116, 36.3097, -55.0994, 38.4249, -57.7603, 40.5144, -60.3891, 42.5742, -62.9805, 44.5999, -65.529, 46.5873, -68.0292, 48.5322, -70.476, 50.4302, -72.8638, 52.2771, -75.1873, 54.0687, -77.4412, 55.8006, -79.6202, 57.4688, -81.7188, 59.0687, -83.7317, 60.5964, -85.6535, 63.4175, -89.2026, 65.898, -92.3233, 68.0039, -94.9727, 70.9556, -98.686, 72, -100)
width = 2.2
default_color = Color(0, 0, 0, 1)

[node name="Weight" type="Label" parent="Connections/N2toN3"]
offset_left = 17.0
offset_top = -40.0
offset_right = 57.0
offset_bottom = -14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="N3toLamp" type="Path2D" parent="Connections"]
position = Vector2(250, 150)
curve = SubResource("Curve2D_2f4kj")
script = SubResource("GDScript_s7grx")
weight = 1.0

[node name="Line2D" type="Line2D" parent="Connections/N3toLamp"]
points = PackedVector2Array(-21, -18, -17.0039, -17.2266, -12.4175, -16.3389, -9.59637, -15.7928, -6.46875, -15.1875, -3.06866, -14.5294, 0.569824, -13.8252, 4.41266, -13.0814, 8.42578, -12.3047, 12.5751, -11.5016, 16.8267, -10.6787, 21.1463, -9.84265, 25.5, -9, 29.8537, -8.15735, 34.1733, -7.32129, 38.4249, -6.49841, 42.5742, -5.69531, 46.5873, -4.91858, 50.4302, -4.1748, 54.0687, -3.47058, 57.4688, -2.8125, 60.5964, -2.20715, 63.4175, -1.66113, 68.0039, -0.773438, 72, 0)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="Weight" type="Label" parent="Connections/N3toLamp"]
offset_left = 16.0
offset_top = -25.0
offset_right = 56.0
offset_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="VBoxContainer" parent="."]
offset_left = 308.0
offset_top = 262.0
offset_right = 508.0
offset_bottom = 379.0

[node name="Label" type="Label" parent="Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Neuron 3 Threshold:"
horizontal_alignment = 1

[node name="ThresholdSlider" type="HSlider" parent="Controls"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="ThresholdValue" type="Label" parent="Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0.5"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="Controls"]
layout_mode = 2
text = "Reset Network"

[node name="InfoPanel" type="PanelContainer" parent="."]
offset_left = 28.0
offset_top = 255.0
offset_right = 278.0
offset_bottom = 375.0

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="InfoPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Adjust the input values with the sliders. 
The lamp will light up when the weighted sum from neuron 3 exceeds the threshold.

Try to find multiple ways to activate the lamp!"
autowrap_mode = 2

[connection signal="value_changed" from="Layer1/Neuron1/Slider" to="." method="_on_input_changed"]
[connection signal="value_changed" from="Layer1/Neuron2/Slider" to="." method="_on_input_changed"]
[connection signal="value_changed" from="Controls/ThresholdSlider" to="." method="_on_threshold_changed"]
[connection signal="pressed" from="Controls/ResetButton" to="." method="_on_reset_button_pressed"]
